# ComputerGraphics

./: .gitignore  CMakeLists.txt  ImageGenerator.cpp  ImageGenerator.h  ImageSpecifications.h  L2D.cpp  L2D.h  L3D.cpp  L3D.h  README.md  engine.cc
3D_Bodies/: cube.ini  dodecahedron.ini  icosahedron.ini  octahedron.ini  tetrahedron.ini
Geometry/: L2D.cpp  L2D.h  L3D.cpp  L3D.h
ImageGeneration/: ImageGenerator.cpp  ImageGenerator.h  ImageSpecifications.cpp  ImageSpecifications.h
utils/: easy_image.cc  utils.cpp  utils.h
